--- a/src/components/Cards/card.css
+++ b/src/components/Cards/card.css
@@ -2,15 +2,16 @@
 
 .card-container{
     width: 100%;
-    height: 130px;
+    height: auto;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background: #4169E1;
+    justify-content: center;
+    /* align-items: center; */
+    background: #272b2e;
     border-radius: 10px;
     margin-right: 20px;
     margin-top: 20px;
+    padding: 20px 10px 0 10px;
     
     -webkit-box-shadow: 0px 0px 12px 2px rgba(33,36,38,1);
 -moz-box-shadow: 0px 0px 12px 2px rgba(33,36,38,1);
@@ -18,64 +19,46 @@ box-shadow: 0px 0px 12px 2px rgba(33,36,38,1);
 
 }
 
-.card{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5%;
-    width: 100%;
-
-}
-
-.card-info{
-    /* background: blue; */
-    font-size: 14px;
-    color: white;
-}
-.card-info img{
-    width: 45px;
-    
-}
-.card-info2{
+.card-local{
     display: flex;
     flex-direction: column;
+    padding: 10px 0 10px 40px;
+    margin-bottom: 10px;
+    background-color:#212528;
+    border-radius: 5px;
+}
+
+.card-icon{
+    display: flex;
+    flex-direction: row;
+}
+
+.card-icon img{
+    width: 30px;
+    height: 30px;
+}
+
+.Titulo-card{
+    color: #fff;
+    font-weight: bold;
+    margin-left: 10px;
+}
+
+.paragrafo{
+    margin-left: 40px;
+    color: #cdcdcd;
+}
+
+.paragrafoCond{
+    margin-left: 40px;
+    color: #fff;
+}
+
+#COND{
+    display: flex;
+    background-color: aqua;
+    width: 100px;
     justify-content: center;
     align-items: center;
-    font-size: 14px;
-    color: white;
-    font-weight: 500;
-}
-.BtnRonda{
-    width: 100px;
-    height: 30px;
-    background-color: #fff;
-    color: #3994d1;
-    border: 0;
-    border-radius: 30px;
-    margin-top: 5px;
-    cursor:pointer;
-}
-
-#postId{
-    font-size: 12px;
-}
-
-
-.card-info2 img{
-    width: 70px;
-    
-}
-
-@media screen and (max-width:1100px){
-    .card-container{
-        width: 95%;
-        height: 140px;
-        margin: 5px 10px 5px 10px;
-        padding: 30px;
-    }
-    .card-info{
-        /* background: blue; */
-        font-size: 12px;
-        color: white;
-    }
+    border-radius: 10px;
 }
