--- a/src/components/CardsOcorrencia/cardsOcorrencia.css
+++ b/src/components/CardsOcorrencia/cardsOcorrencia.css
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
-    background: #4169E1;
+    background: #272b2e;
     border-radius: 10px;
     margin-right: 20px;
     margin-top: 20px;
@@ -79,6 +79,8 @@ box-shadow: 0px 0px 12px 2px rgba(33,36,38,1);
     margin-top: 5px;
     cursor:pointer
 }
+
+
 
 @media screen and (max-width:1100px){
     .card-container2{
