--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -69,7 +69,7 @@
   padding: 15px 50px 10px 5px;
   /* border:none;
   border-radius: 30px; */
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   border-radius: 5px;
   
  
@@ -123,6 +123,7 @@
   margin: 8px;
   transition: 0.3s;
   display: none;
+  cursor:pointer;
 
 }
 
